# rdc-correlate

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: SETUP.md
install/: install.sh
rdc_correlate/: __main__.py  cloud.py  correlate.py  db.py  mappings.py  publish.py  wire.py
tests/: test_correlate.py  test_mappings.py  test_wire.py
