[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "rdc-correlate"
version = "0.1.0"
description = "Correlates Kohler RDC TLV wire protocol against Rehlko cloud API to verify and discover parameter mappings."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "andrewroydshayes"}]
dependencies = [
    "requests>=2.25",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[project.scripts]
rdc-correlate = "rdc_correlate.__main__:main"

[tool.setuptools]
packages = ["rdc_correlate"]

[tool.pytest.ini_options]
testpaths = ["tests"]
