[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "rdc-correlate"
version = "0.2.0"
description = "Correlates Kohler RDC TLV wire protocol against Rehlko cloud API to verify and discover parameter mappings."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "andrewroydshayes"}]
keywords = ["kohler", "rdc", "rehlko", "tlv", "correlation", "reverse-engineering"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering",
    "Topic :: System :: Networking",
]
dependencies = [
    "requests>=2.25",
]

[project.urls]
Homepage = "https://github.com/andrewroydshayes/rdc-correlate"
Repository = "https://github.com/andrewroydshayes/rdc-correlate"
Issues = "https://github.com/andrewroydshayes/rdc-correlate/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[project.scripts]
rdc-correlate = "rdc_correlate.__main__:main"

[tool.setuptools]
packages = ["rdc_correlate"]

[tool.pytest.ini_options]
testpaths = ["tests"]
